fix: display name submit button wrong colour
Revert to black on-solid-primary.

--- a/res/css/_common.pcss
+++ b/res/css/_common.pcss
@@ -130,6 +130,10 @@ body {
     .mx_SpaceRoomView_landing_inviteButton:before {
         background: #101317 !important;
     }
+    /* settings, profile, display name, submit button */
+    .mx_UserProfileSettings_profile button:nth-child(1) > svg {
+        color: #101317 !important;
+    }    
 }
 
 pre,
